# Annau-2022

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fig4.ipynb  jupyter_notebook_config.py  pyproject.toml  requirements.txt  setup.py
Annau2022/: RAPSD.py  SRModel.py  Untitled.ipynb  metrics.py  progress_bar.py
Annau2022/data/: netcdf_to_pt.ipynb  stats.json
Annau2022/models/: copy.py  generator.py
Annau2022/models/store/079a94c41ad3482996cc2b9f95adba8d/Generator/Generator_999/: MLmodel
Annau2022/models/store/0c5ee480663f4f9eb7200f8879aa1244/Generator/Generator_999/: MLmodel
Annau2022/models/store/14b60d24b1634096b01734e9544ce08f/Generator/Generator_999/: MLmodel  state_dict.pth
Annau2022/models/store/1570ac86f8e94e83b85447618ca576f5/Generator/Generator_999/: MLmodel
Annau2022/models/store/1824682ae27c48669665cf042052d584/Generator/Generator_999/: state_dict.pth
Annau2023/: SRModel.py  progress_bar.py
Annau2023/data/: README.md  netcdf_to_pt.ipynb
Annau2023/data/metric_evolution/: central_test_metrics.csv  central_train_metrics.csv  southeast_test_metrics.csv  southeast_train_metrics.csv  west_test_metrics.csv  west_train_metrics.csv
Annau2023/models/: critic.py
data_old/pfs_data/: netcdf_to_pt.ipynb
models/store/: copy.py
models/store/0c5ee480663f4f9eb7200f8879aa1244/Generator/Generator_999/: state_dict.pth
models/store/1824682ae27c48669665cf042052d584/Generator/Generator_999/: MLmodel
models/store/1d568d304d7546f78c57e98ff1366b9d/Generator/Generator_999/: state_dict.pth
models/store/2e78fba6814545f0be62896cd14b031f/Generator/Generator_999/: conda.yaml  state_dict.pth
models/store/2faf762448b54ae2b96234d6c77c38b3/Generator/Generator_999/: requirements.txt
models/store/328e5221158147a9ba9b41ab2ac385c7/Generator/Generator_999/: MLmodel  state_dict.pth
models/store/3858c673c9344e7caf24144335981752/Generator/Generator_999/: MLmodel
models/store/4f0574ec4f7147f1b0555cafeb1cc98f/Generator/Generator_999/: state_dict.pth
models/store/5c9745ff961e46f9af206d36b6567fae/Generator/Generator_999/: state_dict.pth
models/store/70f5be887eff42e8a216780752644b2f/Generator/Generator_999/: MLmodel  state_dict.pth
models/store/90375b9266eb442cb15073895e14d691/Generator/Generator_999/: state_dict.pth
models/store/ad5772150e7547ee8d14aa7bac192f54/Generator/Generator_999/: MLmodel
models/store/bcf7e7cfa8ab4c4196ad6a2bb18e8601/Generator/Generator_999/: state_dict.pth
models/store/c4ec13e65fe74b399fc9e325a9966fef/Generator/Generator_999/: state_dict.pth
models/store/c5154f8f03c74cba924d789357e5ca84/Generator/Generator_999/: state_dict.pth
models/store/c5c5e0e8aad5411783329f31db91ff78/Generator/Generator_999/: MLmodel
models/store/caf7f501306848f8bc746605c4994e31/Generator/Generator_999/: MLmodel
models/store/db9f0fae83c949eaad5d1176a43dae47/Generator/Generator_999/: conda.yaml
models/store/e25c6b40324643c3afc1cf42981b11b5/Generator/Generator_999/: MLmodel
paper/: Untitled.ipynb  fig1.ipynb  fig10.ipynb  fig2.ipynb  fig4.ipynb  fig4_5.ipynb  fig5.ipynb  fig6.ipynb  fig6_s1.ipynb  fig6_s7.ipynb  fig7.ipynb  fig8.ipynb  fig9.ipynb  fig_s11_to_s13.ipynb  fig_s14_to_s16.ipynb  fig_s8_to_s10.ipynb  rename_metric_files.ipynb  table2.ipynb
src/scripts/Annau-2022/: critic.py  experiment.py  generator.py
(+102 files in other folders)
